# Insight

./: .gitignore  README.md  技术文档.md
android/: build.gradle.kts  gradlew  (+1 more)
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_01_1035-initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: exceptions.py  retry.py  state.py
backend/app/models/db/: base.py  insight.py  token_usage.py  topic.py
backend/app/models/llm/: __init__.py  final_briefing.py  logic_point.py  source.py
backend/app/repositories/: base.py  insight.py  topic.py
backend/app/services/: scheduler.py
backend/app/services/agents/: critic.py  distiller.py  editor.py  newsnow_client.py  rss_client.py  scout.py  workflow.py
backend/app/services/embedding/: __init__.py  service.py
backend/app/services/llm/: client.py  context_manager.py  cost_tracker.py
backend/app/services/prompts/: __init__.py  critic_prompts.py  distiller_prompts.py
backend/app/services/vector/: base.py  chroma.py
backend/app/utils/: content_extractor.py
backend/scripts/: seed_data.py  setup_db.py
backend/tests/: conftest.py
backend/tests/integration/: test_workflow.py
backend/tests/integration/test_api/: test_health.py
backend/tests/integration/test_database/: test_insight_repository.py  test_topic_repository.py
backend/tests/unit/test_core/: test_retry.py  test_state.py
backend/tests/unit/test_models/: test_final_briefing.py  test_topic.py
backend/tests/unit/test_services/: test_cost_tracker.py  test_critic.py  test_distiller.py  test_editor.py  test_embedding.py  test_llm_client.py  test_scout.py
(+46 files in other folders)
